--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
     "serve-favicon": "~2.3.0"
   }
 }
